# hyphenation

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs
benches/: hyphenate.rs  lib.rs
dictionaries/: af.standard.bincode  as.standard.bincode  be.standard.bincode  bg.standard.bincode  bn.standard.bincode  ca.extended.bincode  ca.standard.bincode  cop.standard.bincode  cs.standard.bincode  cu.standard.bincode  cy.standard.bincode  da.standard.bincode  de-1901.standard.bincode  de-1996.standard.bincode  de-ch-1901.standard.bincode  el-monoton.standard.bincode  el-polyton.standard.bincode  en-gb.standard.bincode  en-us.standard.bincode  eo.standard.bincode  es.standard.bincode  et.standard.bincode  eu.standard.bincode  fi-x-school.standard.bincode  fi.standard.bincode  fr.standard.bincode  fur.standard.bincode  ga.standard.bincode  gl.standard.bincode  grc.standard.bincode  gu.standard.bincode  hi.standard.bincode  hr.standard.bincode  hsb.standard.bincode  hu.extended.bincode  hu.standard.bincode  hy.standard.bincode  ia.standard.bincode  id.standard.bincode  is.standard.bincode  (+41 more)
hyphenation_commons/: Cargo.toml  README.md  build.rs
hyphenation_commons/src/: dictionary.rs  language.rs  lib.rs  parse.rs  serde_types.in.rs
hyphenation_commons/src/dictionary/: extended.rs  mod.rs  trie.rs
klpattern/: Cargo.toml
klpattern/src/: lib.rs  serde_types.in.rs
patterns/: hyph-af.hyp.json  hyph-af.pat.json  hyph-as.pat.json  hyph-bg.pat.json  hyph-ca.ext.txt  hyph-ca.hyp.json  hyph-ca.pat.json  hyph-cop.pat.json  hyph-cs.hyp.json  hyph-cs.pat.json  hyph-cu.hyp.json  hyph-cu.pat.json  hyph-cy.pat.json  hyph-da.pat.json  hyph-de-1901.pat.json  hyph-de-1996.pat.json  hyph-de-ch-1901.pat.json  hyph-el-monoton.pat.json  hyph-el-polyton.pat.json  hyph-en-gb.hyp.json  hyph-en-gb.pat.json  hyph-en-us.hyp.json  hyph-en-us.hyp.txt  hyph-en-us.pat.json  hyph-eo.pat.json  hyph-es.pat.json  hyph-et.pat.json  hyph-eu.pat.json  hyph-fi.pat.json  hyph-fr.pat.json  hyph-fur.pat.json  hyph-ga.hyp.json  hyph-ga.pat.json  hyph-gl.pat.json  hyph-grc.pat.json  hyph-gu.pat.json  hyph-hi.pat.json  hyph-hr.pat.json  hyph-hsb.hyp.json  hyph-hsb.pat.json  (+55 more)
src/: case_folding.rs  exception.rs  extended.rs  hyphenator.rs  iter.rs  klpair.rs  language.rs  lib.rs  load.rs  pattern.rs  resources.rs  score.rs  utilia.rs
tests/: lib.rs
