[package]
name = "hyphenation"
version = "0.5.0"

authors = ["ndr <ndr@qef.io>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/ndr-qef/hyphenation"
homepage = "https://github.com/ndr-qef/hyphenation"
documentation = "https://docs.rs/hyphenation"

readme = "README.md"
description = "Standard Knuth-Liang hyphenation based on the TeX UTF-8 patterns."
keywords = ["text", "typesetting"]


include = ["**/*.rs", "**/Cargo.toml", "patterns-tex", "**/*.md", "LICENSE*"]
build = "build.rs"


[features]

# Normalization forms.
#
# HEED: these features are mutually exclusive; only one may be passed to rustc/cargo as an argument. This restriction may be lifted in the future, should `hyphenation` benefit from operating on multiple forms at runtime.
#
# `build.rs` ensures – in rather haphazard fashion – that these multiple "features" effectively behave as a single parameter, i.e. as a closed set. Were the user to select more than one normalization form, the build will fail – alas, with an uninformative error message.

nfc = []
nfd = []
nfkc = []
nfkd = []
none = []

# The default is manually implemented by `build.rs`, since other features cannot disable it.
# default = ["nfc"]


[dependencies]
klpattern = { path = "klpattern", version = "0.6.0" }
bincode = "0.6"
fnv = "1.0"
unicode-segmentation = "0.1"

[build-dependencies]
klpattern = { path = "klpattern", version = "0.6.0" }
bincode = "0.6"
pocket-resources = "0.3"
serde = "0.8"
unicode-normalization = "0.1"

[dev-dependencies]
lazy_static = "0.2"
quickcheck = "0.3"
