[package]
name = "hyphenation"
version = "0.7.1"

authors = ["Andrew <andrew@banausia.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/tapeinosyne/hyphenation"
homepage = "https://github.com/tapeinosyne/hyphenation"
documentation = "https://docs.rs/hyphenation"

readme = "README.md"
description = "Knuth-Liang hyphenation for a variety of languages"
keywords = ["text", "typesetting"]


include = ["**/*.rs", "**/Cargo.toml", "dictionaries/*", "patterns/*",
           "README.md", "CHANGELOG.md", "LICENSE*"]
build = "build.rs"


[features]
embed_all = ["pocket-resources"]
embed_en-us = ["pocket-resources"]
build_dictionaries = []

# Unicode normalization.
#
# HEED: these features are mutually exclusive; only one may be passed to
# rustc/cargo as an argument. `build.rs` ensures that these multiple "features"
# effectively behave as a single, configurable parameter: were the user to
# select more than one normalization form, the build will fail.
nfc = ["unicode-normalization"]
nfd = ["unicode-normalization"]
nfkc = ["unicode-normalization"]
nfkd = ["unicode-normalization"]


[workspace]
members = ["hyphenation_commons"]

[dependencies]
hyphenation_commons = { path = "hyphenation_commons", version = "0.7.1" }
fst = "0.4"
bincode = "1.2"
serde = "1.0"

[build-dependencies]
hyphenation_commons = { path = "hyphenation_commons", version = "0.7.1" }
fst = "0.4"
bincode = "1.2"
serde = "1.0"
pocket-resources = { version  = "0.3", optional = true }
unicode-normalization = { version  = "0.1", optional = true }

[dev-dependencies]
lazy_static = "1.4"
quickcheck = "0.9"
unicode-segmentation = "1.2"
