[package]
name = "hyphenation_commons"
version = "0.7.0"  # version-locked to the main `hyphenation` crate

authors = ["Andrew <andrew@banausia.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/tapeinosyne/hyphenation"
homepage = "https://github.com/tapeinosyne/hyphenation"
documentation = "https://docs.rs/hyphenation"

description = "Proemial code for the `hyphenation` library"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
atlatl = { version = "0.1", features = ["serde"] }
