[package]
name = "hyphenation_commons"
version = "0.8.3"

authors = ["Andrew <andrew@banausia.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/tapeinosyne/hyphenation"
homepage = "https://github.com/tapeinosyne/hyphenation"
documentation = "https://docs.rs/hyphenation"

description = "Proemial code for the `hyphenation` library"

[dependencies]
fst = "0.4"
serde = { version = "1.0", features = ["derive"] }
